Fix spacing issue in Collection page

--- a/refactor/components/Breadcrumb.module.scss
+++ b/refactor/components/Breadcrumb.module.scss
@@ -2,6 +2,7 @@
 
 .root {
 	font-weight: bold;
+	margin-bottom: 1em;
 
 	> a {
 		display: inline-block;
