--- a/refactor/components/Main.module.scss
+++ b/refactor/components/Main.module.scss
@@ -27,6 +27,7 @@
 
 .content {
 	flex: 1;
+	margin-bottom: 3em;
 }
 
 .footer {
