--- a/refactor/pages/index.module.scss
+++ b/refactor/pages/index.module.scss
@@ -5,7 +5,3 @@
 .featuredGrid {
 	margin-bottom: 3.5em;
 }
-
-.content {
-	margin-bottom: 2em;
-}
