--- a/refactor/pages/me.module.scss
+++ b/refactor/pages/me.module.scss
@@ -1,7 +1,3 @@
 .hero {
 	margin-bottom: 3.5em;
 }
-
-.grid {
-	margin-bottom: 2em;
-}
